lib improvements for 17wi: log version info on load; init() for SimpleActivity; auto-infer layout